Fixed radio buttons bug
Radio buttons were not refreshing canvas on load.

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
             <div class="column">
                 <span>WOOD</span>​
                 <form id="woodTypes" autocomplete="off">
-                    <input type="radio" name="1" onClick="updateWood(0);" checked> Beech
-                    <input type="radio" name="1" onClick="updateWood(1);"> Poplar
+                    <input type="radio" name="woodTypeButtons" onClick="updateWood(0);" checked> Beech
+                    <input type="radio" name="woodTypeButtons" onClick="updateWood(1);"> Poplar
                 </form>
             </div>
             <div class="column">
                 <span>STEM</span>​
                 <form id="stemTypes" autocomplete="off">
-                    <input type="radio" name="1" onClick="updateStem(0);" checked> Short
-                    <input type="radio" name="1" onClick="updateStem(1);"> Long Curved
+                    <input type="radio" name="stemTypeButtons" onClick="updateStem(0);" checked> Short
+                    <input type="radio" name="stemTypeButtons" onClick="updateStem(1);"> Long Curved
                 </form>
             </div>
         </div>
